--- a/about.html
+++ b/about.html
@@ -1,53 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sobre Mi</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sobre Mi</title>
-  <link rel="stylesheet" href="styles/style.css" />
-</head>
+  <body>
+    <header class="header">
+      <button
+        class="header__hamburger"
+        aria-label="Menú principal"
+        title="Menú de navegación"
+      >
+        <span class="header__hamburger-line"></span>
+        <span class="header__hamburger-line"></span>
+        <span class="header__hamburger-line"></span>
+      </button>
+      <nav class="header__menu">
+        <a class="header__menu__link" href="index.html">Home</a>
+        <a class="header__menu__link" href="about.html">Sobre Mi</a>
+        <a class="header__menu__link" href="curriculum.html">Curriculum</a>
+      </nav>
+    </header>
+    <main class="presentacion">
+      <section>
+        <h1 class="presentacion__contenido__titulo">Sobre mí</h1>
+        <br />
+        <p class="presentacion__contenido__texto">
+          Soy desarrollador web en formación, con experiencia en proyectos
+          freelance y un enfoque práctico en la resolución de problemas
+          tecnológicos. Actualmente, curso una tecnicatura en programación y
+          complemento mis estudios con especializaciones en IA, Python y
+          desarrollo full stack con React.
+        </p>
+        <br />
+        <p class="presentacion__contenido__texto">
+          🔹 Experiencia en proyectos reales: ✔ Plataforma para empresa de
+          energía solar – Creé una calculadora interactiva para dimensionar kits
+          solares según el consumo del usuario, mejorando la experiencia del
+          cliente y facilitando la toma de decisiones. ✔ Calculadora de
+          impresiones 3D – Desarrollé una herramienta que automatiza el cálculo
+          de costos, optimizando la cotización de servicios para emprendedores y
+          empresas. ✔ Carrito de compras con dashboard – Implementé un sistema
+          de e-commerce con gestión de productos y pedidos, integrando buenas
+          prácticas de usabilidad. 🔹 Stack tecnológico: HTML, CSS, JavaScript,
+          PHP, MySQL, Bootstrap (UI/UX) Python – Actualmente explorando
+          automatización y desarrollo backend. React – Aprendiendo para mejorar
+          mis habilidades en desarrollo frontend moderno. Pruebas de software
+          (QA) – Aplicación de metodologías para garantizar la calidad. Cursos
+          en IA – Google AI Essentials y Oracle Next Education.
 
-<body>
-  <header class="header">
-    <button class="header__hamburger" aria-label="Menú principal" title="Menú de navegación">
-      <span class="header__hamburger-line"></span>
-      <span class="header__hamburger-line"></span>
-      <span class="header__hamburger-line"></span>
-    </button>
-    <nav class="header__menu">
-      <a class="header__menu__link" href="index.html">Home</a>
-      <a class="header__menu__link" href="about.html">Sobre Mi</a>
-      <a class="header__menu__link" href="curriculum.html">Curriculum</a>
-    </nav>
-  </header>
-  <main class="presentacion">
-    <section>
-      <h1 class="presentacion__contenido__titulo">Sobre mí</h1>
-      <br />
-      <p class="presentacion__contenido__texto">
-        Soy Antonio, un apasionado trainee en desarrollo web y aseguramiento
-        de la calidad (QA), actualmente cursando una tecnicatura en
-        programación. Mi interés en la tecnología y mi compromiso con el
-        aprendizaje continuo me impulsan a mejorar cada día.
-      </p>
-      <br />
-      <p class="presentacion__contenido__texto">
-        Estoy construyendo una base sólida en el desarrollo de software,
-        trabajando con lenguajes y herramientas como HTML, JavaScript, CSS,
-        PHP y MySQL. Además, estoy explorando el aseguramiento de la calidad,
-        aplicando las mejores prácticas en pruebas de software. Mi objetivo es
-        contribuir de manera efectiva en equipos de desarrollo, aprendiendo y
-        evolucionando constantemente para mantenerme al día con las últimas
-        tendencias tecnológicas.
-        <br>No dudes en contactarme! 📧<br>
-        tony_2688@hotmail.com
-      </p>
-    </section>
-    <img class="presentacion__imagen" src="assets/imagenyo.png" alt="imagen de perfil" />
-  </main>
-  <footer class="footer">Desarrolado por Antonio Romero</footer>
-  <script src="scripts/main.js"></script>
-</body>
-
+          <br />📂 Portafolio en GitHub: github.com/tony2688<br />
+          <br />💬 ¿Charlamos? Escríbeme a tony_2688@hotmail.com o conéctame en
+          [LinkedIn].<br />
+        </p>
+      </section>
+      <img
+        class="presentacion__imagen"
+        src="assets/imagenyo.png"
+        alt="imagen de perfil"
+      />
+    </main>
+    <footer class="footer">Desarrolado por Antonio Romero</footer>
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
