--- a/about.html
+++ b/about.html
@@ -37,20 +37,21 @@
         </p>
         <br />
         <p class="presentacion__contenido__texto">
-          🔹 Experiencia en proyectos reales: ✔ Plataforma para empresa de
-          energía solar – Creé una calculadora interactiva para dimensionar kits
+          🔹 Experiencia en proyectos reales: 
+          ✔ Plataforma para empresa de energía solar – Creé una calculadora interactiva para dimensionar kits
           solares según el consumo del usuario, mejorando la experiencia del
-          cliente y facilitando la toma de decisiones. ✔ Calculadora de
-          impresiones 3D – Desarrollé una herramienta que automatiza el cálculo
+          cliente y facilitando la toma de decisiones.
+           ✔ Calculadora de impresiones 3D – Desarrollé una herramienta que automatiza el cálculo
           de costos, optimizando la cotización de servicios para emprendedores y
-          empresas. ✔ Carrito de compras con dashboard – Implementé un sistema
-          de e-commerce con gestión de productos y pedidos, integrando buenas
-          prácticas de usabilidad. 🔹 Stack tecnológico: HTML, CSS, JavaScript,
-          PHP, MySQL, Bootstrap (UI/UX) Python – Actualmente explorando
-          automatización y desarrollo backend. React – Aprendiendo para mejorar
-          mis habilidades en desarrollo frontend moderno. Pruebas de software
-          (QA) – Aplicación de metodologías para garantizar la calidad. Cursos
-          en IA – Google AI Essentials y Oracle Next Education.
+          empresas. 
+          ✔ Carrito de compras con dashboard – Implementé un sistema de e-commerce con gestión de productos y pedidos, integrando buenas
+          prácticas de usabilidad. <br>
+          <br>🔹 Stack tecnológico: HTML, CSS, JavaScript,
+          PHP, MySQL, Bootstrap (UI/UX) 
+          Python – Actualmente explorando automatización y desarrollo backend. 
+          React – Aprendiendo para mejorar mis habilidades en desarrollo frontend moderno. 
+          Pruebas de software (QA) – Aplicación de metodologías para garantizar la calidad. 
+          Cursos en IA – Google AI Essentials y Oracle Next Education. <br>
 
           <br />📂 Portafolio en GitHub: github.com/tony2688<br />
           <br />💬 ¿Charlamos? Escríbeme a tony_2688@hotmail.com o conéctame en
